--- a/components/tooltip/style/index.less
+++ b/components/tooltip/style/index.less
@@ -20,25 +20,25 @@
   &-placement-top,
   &-placement-topLeft,
   &-placement-topRight {
-    padding-bottom: @tooltip-distance;
+    padding-bottom: calc(@tooltip-distance - 0.005rem);
   }
 
   &-placement-right,
   &-placement-rightTop,
   &-placement-rightBottom {
-    padding-left: @tooltip-distance;
+    padding-left: calc(@tooltip-distance - 0.005rem);
   }
 
   &-placement-bottom,
   &-placement-bottomLeft,
   &-placement-bottomRight {
-    padding-top: @tooltip-distance;
+    padding-top: calc(@tooltip-distance - 0.005rem);
   }
 
   &-placement-left,
   &-placement-leftTop,
   &-placement-leftBottom {
-    padding-right: @tooltip-distance;
+    padding-right: calc(@tooltip-distance - 0.005rem);
   }
 
   // Wrapper for the tooltip content
